force-app/main/default/objects/Partner_Support_Information__c/Partner_Support_Information__c.object-meta.xml
<CustomObject>
    <description>Support contact information for Partners.</description>
    <label>Partner Support Information</label>
    <nameField>
        <displayFormat>PSI-{0000}</displayFormat>
        <label>Partner Support Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Support Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>