force-app/main/default/objects/Partner_Support_Information__c/fields/Hours_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Service__c</fullName>
    <description>Partner Support - Hours of Service</description>
    <label>Hours of Service</label>
    <length>100</length>
    <type>Text</type>
</CustomField>