force-app/main/default/objects/Partner_Support_Information__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <description>URL for the logo</description>
    <label>Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>