force-app/main/default/objects/Partner_Support_Information__c/fields/Logo_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Logo_Orientation__c</fullName>
    <label>Logo Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Landscape</fullName>
            </value>
            <value>
                <fullName>Portrait</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>