force-app/main/default/objects/Partner_Support_Information__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Support Information</relationshipLabel>
    <relationshipName>Partner_Support_Information</relationshipName>
    <type>Lookup</type>
</CustomField>