force-app/main/default/objects/Partner_Support_Information__c/fields/Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Email__c</fullName>
    <description>Partner Support Email</description>
    <label>Support Email</label>
    <type>Email</type>
</CustomField>