force-app/main/default/objects/Partner_Support_Information__c/fields/Support_Name__c.field-meta.xml
<CustomField>
    <fullName>Support_Name__c</fullName>
    <description>Partner Support Name</description>
    <label>Support Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>