force-app/main/default/objects/Partner_Support_Information__c/fields/Support_Phone__c.field-meta.xml
<CustomField>
    <fullName>Support_Phone__c</fullName>
    <description>Partner Support Phone</description>
    <label>Support Phone</label>
    <type>Phone</type>
</CustomField>